tests/harness/errors/024_invalid_zdt_literal.eu
# Invalid ZDT literal — February 30 does not exist
x: t"2023-02-30"
